Creando servicio para registro multiple
issue #21
